--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,18 +1,18 @@
 .footer {
   background: #0c7797;
   color: #fff;
-  padding: 3%;
+  padding: 2%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 
   .col {
     width: fit-content;
-    margin: 25px 50px;
+    margin: 25px 44px;
   }
   a {
     color: #fff;
-    font-size: 25px;
+    font-size: 21px;
     margin: 10px;
   }
   .links {
@@ -22,5 +22,10 @@
   h6 {
     font-size: 20px;
     margin-bottom: 15px;
+  }
+}
+@media (max-width: 650px) {
+  .footer .col {
+    margin: 20px;
   }
 }
