--- a/src/components/User.scss
+++ b/src/components/User.scss
@@ -30,12 +30,14 @@
     border-radius: 5px;
     border: 1px solid #ddd;
     margin-bottom: 25px;
+    cursor: pointer;
   }
 }
-// Popup
+// popup
 .popup {
   text-align: center;
-  height: 400px;
+  height: 180px;
+
   .card {
     border: 1px solid #ddd;
     width: 30%;
@@ -48,27 +50,59 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
   h1 {
     font-size: 25px;
   }
+
   p {
     font-size: 25px;
     margin: 25px;
   }
+
   .backdrop {
     position: fixed;
     z-index: 2;
     top: 0;
-    left: 0%;
+    left: 0;
     width: 100%;
     height: 100%;
-    min-height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.75));
+    background: rgba(0, 0, 0, 0.75);
   }
+
   button {
     font-size: 20px;
     padding: 15px 35px;
     border-radius: 5px;
     border: 1px solid #ddd;
+    cursor: pointer;
+  }
+}
+@media (max-width: 1500px) {
+  .user {
+    margin: 5%;
+  }
+  .user .item {
+    border: 1px solid #0c7797;
+    width: 48%;
+    padding: 20px;
+  }
+  .popup .card {
+    width: 90%;
+  }
+}
+@media (max-width: 950px) {
+  .user {
+    margin: 5%;
+  }
+  .user .item {
+    width: 44%;
+    margin: 22px 17px;
+  }
+}
+@media (max-width: 650px) {
+  .user .item {
+    width: 100%;
+    margin: 22px 0;
   }
 }
